--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 server:
-  port: 8000
+  port: 80
 
 eureka:
   client:
@@ -21,7 +21,7 @@ spring:
             - Method=GET, POST
           filters:
             - RemoveRequestHeader=Cookie
-            - RewritePath=/user-service/(?<segment>.*), /$\{segment}
+            - RewritePath=/member/(?<segment>.*), /$\{segment}
         - id: reservation-service
           uri: lb://RESERVATION-SERVICE
           predicates:
@@ -29,8 +29,13 @@ spring:
             - Method=GET, POST
           filters:
             - RemoveRequestHeader=Cookie
-            - RewritePath=/user-service/(?<segment>.*), /$\{segment}
+            - RewritePath=/reservation/(?<segment>.*), /$\{segment}
             - AuthorizationHeaderFilter
+        - id: frontend-service
+          uri: http://3.35.14.180/login
+          predicates:
+            - Path=/meeting/**
+            - Method=GET, POST
 
 token:
   secret: sample
